<resources>
    <string name="app_name">EmployeeAttendance</string>
    <string name="view_attendance_report">View Attendance Report</string>
    <string name="check">check</string>
    <string name="select_employee">Select Employee</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="hours_logged">Hours Logged</string>
    <string name="days_present">Days Present</string>
    <string name="days_absent">Days Absent</string>
    <string name="emp_name">EmpName</string>
    <string name="emp_id">EmpId</string>
    <string name="from_date">FromDate</string>
    <string name="to_date">ToDate</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="date_of_the_month">Date of the Month</string>
    <string name="no_of_hours_logged">No. of Hours Logged</string>
    <string name="attendance_report_of">Attendance Report for</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="no_data_found">No Data Found!</string>
</resources>
