<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3"
        tools:context=".ui.EmployeeSelectionActivity.MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:theme="@style/ToolbarTheme" app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAttendanceReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#ffffff"
                android:layout_margin="20dp"
                app:contentPadding="40dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:gravity="center"
                          android:orientation="vertical">

                <ImageView android:layout_width="100dp"
                           android:layout_height="100dp"
                           android:src="@drawable/ic_employees"/>
                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/select_employee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:id="@+id/textInputLayout">

                    <AutoCompleteTextView
                            android:id="@+id/selectEmployeeDropDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_month"
                        android:layout_margin="10dp"
                        android:id="@+id/textInputLayout2">

                    <AutoCompleteTextView
                            android:id="@+id/selectMonthDropDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_year"
                        android:layout_margin="10dp"
                        android:id="@+id/textInputLayout3">

                    <AutoCompleteTextView
                            android:id="@+id/selectYearDropDown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_attendance_report"
                        android:layout_margin="10dp"
                        android:id="@+id/viewAttendanceButton"
                        android:backgroundTint="@color/colorAccent"
                        app:cornerRadius="50dp"
                        app:icon="@drawable/ic_report"
                        app:iconTint="#000000"
                        android:textColor="@color/design_default_color_on_secondary"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>