<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EmployeeAttendanceActivity.EmployeeAttendanceActivity"
        android:background="#e3e3e3">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="#e3e3e3" android:id="@+id/nestedScrollView">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="#e3e3e3">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:text=""
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/headerText"
                    android:gravity="center" android:fontFamily="@font/roboto"/>
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardAttendanceReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffff"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/headerText">

                <TableLayout
                        android:id="@+id/attendanceReportTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:divider="?android:attr/dividerHorizontal"
                        android:showDividers="middle"
                        android:stretchColumns="*"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardFinalReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#ffffff"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/cardAttendanceReport">

                <TableLayout
                        android:id="@+id/finalReportTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:divider="?android:attr/dividerHorizontal"
                        android:showDividers="middle"
                        android:stretchColumns="*">
                    <TableRow android:background="#ffffff">
                        <TextView
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text="@string/hours_logged"
                                android:textSize="14sp"
                                android:textColor="@color/design_default_color_on_secondary"
                                android:fontFamily="@font/roboto_medium"/>
                        <TextView
                                android:gravity="center"
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:text="@string/days_present"
                                android:textSize="14sp"
                                android:textColor="@color/design_default_color_on_secondary"
                                android:fontFamily="@font/roboto_medium"/>
                        <TextView
                                android:gravity="center"
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:text="@string/days_absent"
                                android:textSize="14sp"
                                android:textColor="@color/design_default_color_on_secondary"
                                android:fontFamily="@font/roboto_medium"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                                android:id="@+id/hoursLoggedText"
                                android:textStyle="normal"
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:gravity="center"
                                android:text=""
                                android:textSize="15sp"
                                android:background="#f2f2f2"
                                android:fontFamily="@font/roboto"/>
                        <TextView
                                android:id="@+id/daysPresentText"
                                android:gravity="center"
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:textStyle="normal"
                                android:text=""
                                android:textSize="15sp"
                                android:background="#f2f2f2"
                                android:fontFamily="@font/roboto"/>
                        <TextView
                                android:id="@+id/daysAbsent"
                                android:gravity="center"
                                android:height="30dp"
                                android:layout_width="90dp"
                                android:layout_height="50dp"
                                android:textStyle="normal"
                                android:text=""
                                android:textSize="15sp"
                                android:background="#f2f2f2"
                                android:fontFamily="@font/roboto"/>
                    </TableRow>
                </TableLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
